# APIAnyware

./: .gitignore  CONTEXT.md  Cargo.toml  MIGRATION.md  Makefile  README.md  REFACTOR.md  TODO.md
analysis/crates/annotate/: Cargo.toml
analysis/crates/annotate/src/: heuristics.rs  lib.rs  llm.rs  pattern_detection.rs  validate.rs
analysis/crates/datalog/: Cargo.toml
analysis/crates/datalog/src/: loading.rs
analysis/crates/enrich/: Cargo.toml
analysis/crates/enrich/src/: checkpoint.rs  fact_loader.rs
analysis/crates/enrich/tests/: enrichment_rules.rs
collection/crates/cli/: Cargo.toml
generation/crates/bundle-chez/: Cargo.toml  README.md
generation/crates/bundle-chez/examples/: bundle_app.rs  bundle_standalone.rs
generation/crates/bundle-chez/scripts/: extract-deps.ss  precompile.ss  standalone-collisions.ss
generation/crates/bundle-chez/src/: bundle.rs  deps.rs  launch.rs  lib.rs  precompile.rs  spec.rs  standalone.rs
generation/crates/bundle-chez/src/resources/: embed_main.c
generation/crates/bundle-chez/tests/: bundle_apps.rs
generation/crates/bundle-gerbil/: Cargo.toml  README.md
generation/crates/bundle-gerbil/examples/: bundle_app.rs
generation/crates/bundle-gerbil/src/: bundle.rs  compile.rs  deps.rs  lib.rs  relocate.rs  spec.rs  standalone.rs
generation/crates/bundle-gerbil/tests/: bundle_apps.rs
generation/crates/bundle-racket/: Cargo.toml
generation/crates/bundle-racket/examples/: bundle_app.rs
generation/crates/bundle-racket/src/: bundle.rs  deps.rs  lib.rs  spec.rs
generation/crates/bundle-racket/tests/: bundle_apps.rs  info_plist_overrides.rs  signing_identity.rs
generation/crates/bundle-sbcl/: Cargo.toml  README.md
generation/crates/bundle-sbcl/examples/: bundle_app.rs
generation/crates/bundle-sbcl/src/: dump.rs  lib.rs  spec.rs  standalone.rs  stub.rs  vendor.rs
generation/crates/bundle-sbcl/tests/: bundle_apps.rs
generation/crates/emit-chez/: Cargo.toml
generation/crates/emit-chez/src/: chez_builtins.rs  emit_class.rs  emit_constants.rs  emit_enums.rs  emit_framework.rs  emit_functions.rs  emit_protocol.rs  ffi_type_mapping.rs  lib.rs  method_filter.rs  naming.rs  shared_signatures.rs  trampoline.rs
generation/crates/emit-chez/tests/: runtime_load_test.rs
generation/crates/emit-gerbil/: Cargo.toml
generation/crates/emit-gerbil/examples/: dump_foundation_constants.rs  dump_foundation_functions.rs
generation/crates/emit-gerbil/src/: class_graph.rs  emit_class.rs  emit_constants.rs  emit_enums.rs  emit_framework.rs  emit_functions.rs  emit_generics.rs  emit_protocol.rs  ffi_type_mapping.rs  lib.rs  method_filter.rs  naming.rs  protocol_registry.rs  shared_signatures.rs  trampoline.rs
generation/crates/emit-gerbil/tests/: runtime_load_test.rs  snapshot_test.rs
generation/crates/emit-gerbil/tests/golden/: generics.ss
generation/crates/emit-gerbil/tests/golden-foundation/: foundation.ss  generics.ss
generation/crates/emit-sbcl/: Cargo.toml
generation/crates/emit-sbcl/src/: class_graph.rs  emit_class.rs  emit_constants.rs  emit_enums.rs  emit_framework.rs  emit_functions.rs  emit_generics.rs  emit_protocol.rs  emit_struct.rs  ffi_type_mapping.rs  lib.rs  method_filter.rs  naming.rs  protocol_registry.rs  shared_signatures.rs  trampoline.rs
generation/crates/emit-sbcl/tests/: object_model_test.rs  orchestration_test.rs  protocol_test.rs  snapshot_test.rs  top_level_test.rs
generation/crates/emit-sbcl/tests/golden/: testkit.lisp
generation/crates/emit-sbcl/tests/golden-foundation/: foundation.lisp
schemas/tools/validate/: Cargo.toml
schemas/tools/validate/src/: lib.rs  main.rs
schemas/tools/validate/tests/: authored_tree.rs
semantic/tools/analyze-cli/: Cargo.toml
semantic/tools/analyze-cli/examples/: prune_llm_ownership.rs
semantic/tools/analyze-cli/src/: annotations.rs  main.rs
semantic/tools/analyze-cli/src/annotations/: audit.rs  stale.rs
semantic/tools/patterns/: Cargo.toml
semantic/tools/patterns/src/: apiw.rs  error.rs  instance.rs  kind.rs  lib.rs  registry.rs  schema.rs  vocab.rs
semantic/tools/patterns/tests/: instance_carriage.rs  registry_load.rs
semantic/tools/spec-format/: Cargo.toml
semantic/tools/spec-format/examples/: convert-llm-annotations.rs
semantic/tools/spec-format/src/: apiw.rs  convert.rs  error.rs  jik.rs  lib.rs  machine.rs  machine_schema.rs  schema.rs
semantic/tools/spec-format/tests/: apiw_roundtrip.rs  convert_llm_annotations.rs  machine_roundtrip.rs  machine_schema_validation.rs  schema_validation.rs
semantic/tools/spec-format/tests/fixtures/: invalid.apiw  valid.apiw
targets/_shared/tools/conformance-cli/: Cargo.toml
targets/_shared/tools/conformance-cli/src/: main.rs
targets/_shared/tools/generate-cli/: Cargo.toml
targets/_shared/tools/generate-cli/src/: generate.rs  main.rs  registry.rs
targets/_shared/tools/target-model/: Cargo.toml
targets/_shared/tools/target-model/src/: derive.rs  error.rs  lib.rs  vocab.rs
targets/_shared/tools/target-model/tests/: adapter_specs.rs  capability_profiles.rs  conformance_reports.rs  idiom_catalogues.rs  projection_policies.rs  target_registry.rs
targets/gerbil/tools/emit-gerbil/: Cargo.toml
targets/gerbil/tools/emit-gerbil/examples/: dump_foundation_constants.rs  dump_foundation_functions.rs
targets/gerbil/tools/emit-gerbil/src/: class_graph.rs  emit_class.rs  emit_constants.rs  emit_enums.rs  emit_framework.rs  emit_functions.rs  emit_generics.rs  emit_protocol.rs  ffi_type_mapping.rs  lib.rs  method_filter.rs  protocol_registry.rs  shared_signatures.rs  trampoline.rs
targets/gerbil/tools/emit-gerbil/tests/: runtime_load_test.rs  snapshot_test.rs
targets/racket/tools/emit-racket/: Cargo.toml
targets/racket/tools/emit-racket/src/: emit_class.rs  emit_constants.rs  emit_enums.rs  emit_framework.rs  emit_functions.rs  emit_protocol.rs  enrichment_comments.rs  lib.rs  method_filter.rs  naming.rs  trampoline.rs  (+2 more)
targets/sbcl/tools/emit-sbcl/: Cargo.toml
targets/typescript/tools/bundle-typescript/: Cargo.toml  README.md
targets/typescript/tools/emit-typescript/: Cargo.toml
(+2432 files in other folders)
