[workspace]
resolver = "2"
members = [
    # semantic/ domain — semantic-graph builders + analyze CLI
    "semantic/tools/types",
    "semantic/tools/datalog",
    "semantic/tools/resolve",
    "semantic/tools/enrich",
    "semantic/tools/analyze-cli",
    # Collection phase (→ platforms/macos/tools/, k6)
    "collection/crates/extract-objc",
    "collection/crates/extract-swift",
    "collection/crates/cli",
    # Analysis phase (annotate → platforms/macos/tools/, k6)
    "analysis/crates/annotate",
    # Generation phase
    "generation/crates/emit",
    "generation/crates/emit-racket",
    "generation/crates/emit-chez",
    "generation/crates/emit-gerbil",
    "generation/crates/emit-sbcl",
    "generation/crates/cli",
    # Tooling
    "generation/crates/stub-launcher",
    "generation/crates/bundle-racket",
    "generation/crates/bundle-chez",
    "generation/crates/bundle-gerbil",
    "generation/crates/bundle-sbcl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ascent = "0.7"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clang = { version = "2", features = ["clang_10_0", "runtime"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
plist = "1.7"

# Internal crates
apianyware-types = { path = "semantic/tools/types" }
apianyware-extract-objc = { path = "collection/crates/extract-objc" }
apianyware-extract-swift = { path = "collection/crates/extract-swift" }
apianyware-datalog = { path = "semantic/tools/datalog" }
apianyware-resolve = { path = "semantic/tools/resolve" }
apianyware-annotate = { path = "analysis/crates/annotate" }
apianyware-enrich = { path = "semantic/tools/enrich" }
apianyware-emit = { path = "generation/crates/emit" }
apianyware-emit-racket = { path = "generation/crates/emit-racket" }
apianyware-emit-chez = { path = "generation/crates/emit-chez" }
apianyware-emit-gerbil = { path = "generation/crates/emit-gerbil" }
apianyware-emit-sbcl = { path = "generation/crates/emit-sbcl" }
apianyware-stub-launcher = { path = "generation/crates/stub-launcher" }
apianyware-bundle-racket = { path = "generation/crates/bundle-racket" }
apianyware-bundle-chez = { path = "generation/crates/bundle-chez" }

[workspace.lints.rust]
unsafe_code = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
