[workspace]
resolver = "2"
members = [
    # semantic/ domain — semantic-graph builders + analyze CLI
    "semantic/tools/types",
    "semantic/tools/spec-format",
    "semantic/tools/datalog",
    "semantic/tools/resolve",
    "semantic/tools/enrich",
    "semantic/tools/analyze-cli",
    # platforms/macos/ domain — extractors, annotate, collect CLI
    "platforms/macos/tools/extract-objc",
    "platforms/macos/tools/extract-swift",
    "platforms/macos/tools/annotate",
    "platforms/macos/tools/conventions",
    "platforms/macos/tools/collect-cli",
    # targets/_shared/ domain — shared projection substrate + generate CLI
    "targets/_shared/tools/emit",
    "targets/_shared/tools/stub-launcher",
    "targets/_shared/tools/generate-cli",
    # targets/<t>/ domain — per-target emitters + bundlers
    "targets/racket/tools/emit-racket",
    "targets/racket/tools/bundle-racket",
    "targets/chez/tools/emit-chez",
    "targets/chez/tools/bundle-chez",
    "targets/gerbil/tools/emit-gerbil",
    "targets/gerbil/tools/bundle-gerbil",
    "targets/sbcl/tools/emit-sbcl",
    "targets/sbcl/tools/bundle-sbcl",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ascent = "0.7"
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clang = { version = "2", features = ["clang_10_0", "runtime"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
plist = "1.7"
# KDL 2.0 authored-overlay (`.apiw`) parsing. Pinned to =6.3.4: the latest (6.5+)
# requires rustc 1.95 and this repo is on 1.93.1 (ADR-0046; k17 spike). Brings in
# `miette` for format-preserving diagnostics.
kdl = "=6.3.4"
miette = "7"

# Internal crates
apianyware-types = { path = "semantic/tools/types" }
apianyware-spec-format = { path = "semantic/tools/spec-format" }
apianyware-extract-objc = { path = "platforms/macos/tools/extract-objc" }
apianyware-extract-swift = { path = "platforms/macos/tools/extract-swift" }
apianyware-datalog = { path = "semantic/tools/datalog" }
apianyware-resolve = { path = "semantic/tools/resolve" }
apianyware-annotate = { path = "platforms/macos/tools/annotate" }
apianyware-conventions = { path = "platforms/macos/tools/conventions" }
apianyware-enrich = { path = "semantic/tools/enrich" }
apianyware-emit = { path = "targets/_shared/tools/emit" }
apianyware-emit-racket = { path = "targets/racket/tools/emit-racket" }
apianyware-emit-chez = { path = "targets/chez/tools/emit-chez" }
apianyware-emit-gerbil = { path = "targets/gerbil/tools/emit-gerbil" }
apianyware-emit-sbcl = { path = "targets/sbcl/tools/emit-sbcl" }
apianyware-stub-launcher = { path = "targets/_shared/tools/stub-launcher" }
apianyware-bundle-racket = { path = "targets/racket/tools/bundle-racket" }
apianyware-bundle-chez = { path = "targets/chez/tools/bundle-chez" }

[workspace.lints.rust]
unsafe_code = "warn"
future_incompatible = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = "warn"
