[package]
name = "apianyware-annotate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Heuristic annotation classification and LLM annotation merge"

[dependencies]
apianyware-types.workspace = true
apianyware-datalog.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true
