[package]
name = "apianyware-enrich"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Datalog pass 2: annotation-derived enrichment and verification"

[dependencies]
apianyware-types.workspace = true
apianyware-datalog.workspace = true
ascent.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true

[lints]
workspace = true
