[package]
name = "apianyware-collect"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI: apianyware-collect — extract macOS API metadata from SDK"

[dependencies]
apianyware-types.workspace = true
apianyware-extract-objc.workspace = true
apianyware-extract-swift.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
