[package]
name = "apianyware-macos-bundle-gerbil"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundle gerbil sample apps into self-contained macOS .app bundles"

[dependencies]
apianyware-macos-stub-launcher.workspace = true
plist.workspace = true
tempfile = "3"
thiserror.workspace = true
tracing.workspace = true
