[package]
name = "apianyware-macos-bundle-sbcl"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bundle sbcl sample apps into self-contained macOS .app bundles"

[dependencies]
apianyware-macos-stub-launcher.workspace = true
plist.workspace = true
tempfile = "3"
thiserror.workspace = true
tracing.workspace = true
