[package]
name = "apianyware-macos-emit-gerbil"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gerbil Scheme code generation: idiomatic :std/foreign define-c-lambda dispatch, procedural core + :std/generic veneer, Gambit-will lifetimes"

[dependencies]
apianyware-macos-types.workspace = true
apianyware-macos-emit.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

[lints]
workspace = true
