[package]
name = "apianyware-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI: apianyware-analyze — resolve, annotate, enrich pipeline"

[dependencies]
apianyware-types.workspace = true
apianyware-resolve.workspace = true
apianyware-annotate.workspace = true
apianyware-enrich.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
