[package]
name = "apianyware-analyze"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI: apianyware-analyze — in-process resolve (extracted.json + annotations.apiw -> resolved.json)"

[dependencies]
apianyware-types.workspace = true
apianyware-spec-format.workspace = true
apianyware-patterns.workspace = true
apianyware-datalog.workspace = true
apianyware-resolve.workspace = true
apianyware-annotate.workspace = true
apianyware-pattern-detection.workspace = true
apianyware-enrich.workspace = true
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
