[package]
name = "apianyware-generate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI: apianyware-generate — generate language bindings from enriched IR"

[dependencies]
apianyware-types.workspace = true
apianyware-datalog.workspace = true
apianyware-emit.workspace = true
apianyware-emit-racket.workspace = true
apianyware-emit-chez.workspace = true
apianyware-emit-gerbil.workspace = true
apianyware-emit-sbcl.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"
apianyware-spec-format.workspace = true

[lints]
workspace = true
