[package]
name = "apianyware-target-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The shared target-model layer (structural-refactoring grove, workstream 6): authored .apiw parsers/loaders + focused validators for the per-target descriptor, capability profile, idiom catalogue, projection policy, adapter spec, and conformance report. Target-INDEPENDENT machinery over per-target authored data under targets/<t>/. This child (target-descriptor-k51) ships the `target/` submodule only."

[dependencies]
apianyware-spec-format.workspace = true
serde.workspace = true
serde_json.workspace = true
kdl.workspace = true
miette.workspace = true
thiserror.workspace = true

[lints]
workspace = true
