[package]
name = "apianyware-emit-gerbil"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Gerbil Scheme code generation: idiomatic :std/foreign define-c-lambda dispatch, procedural core + :std/generic veneer, Gambit-will lifetimes"

[dependencies]
apianyware-types.workspace = true
apianyware-emit.workspace = true

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true

[lints]
workspace = true
