[package]
name = "apianyware-emit-racket"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Racket code generation: class bindings with tell macro, protocol delegates, enums, constants"

[dependencies]
apianyware-types.workspace = true
apianyware-emit.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
apianyware-spec-format.workspace = true

[lints]
workspace = true
