# THROWAWAY spike addon (ts-substrate-spike-k3). napi-rs N-API addon that links
# the Swift bridge dylib and surfaces the generated-style dispatch entries + the
# probe-2/3 hooks to JS.
# Standalone: keep this throwaway spike out of the repo's Cargo workspace.
[workspace]

[package]
name = "tsspike"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 2
